create-welcome-page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href='https://fonts.googleapis.com/css?family=Public Sans' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Tenor Sans' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Public Sans"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Tenor Sans"
+      rel="stylesheet"
+    />
     <title>PhysioZen</title>
   </head>
   <body>
@@ -31,7 +37,11 @@
           <div class="booking-Appoinment-Button">
             <button class="appoinment-Btn">
               BOOK APPOINMENT
-              <img src="assets/arrow-button-home.webp" alt="Arrow-mark-button" class="arrow-button"/>
+              <img
+                src="assets/arrow-button-home-white.webp"
+                alt="Arrow-mark-button"
+                class="arrow-button"
+              />
             </button>
           </div>
         </div>
@@ -40,11 +50,14 @@
       <!-- Name Container-Home Page -->
       <div class="main-name-container">
         <div class="patients-number-home">
-          <img src="assets/fivestars.png" alt="five-stars" class="five-star"/>
+          <img src="assets/fivestars.png" alt="five-stars" class="five-star" />
           <p class="patientsnum">TRUSTED BY 50,000+ PATIENTS</p>
         </div>
         <header class="main-name-heading-home">
-          <p>Physical Therapy <br> for Body & Soul</p>
+          <p>
+            Physical Therapy <br />
+            for Body & Soul
+          </p>
         </header>
         <div class="main-name-desc-home">
           <p class="name-desc">
@@ -57,7 +70,7 @@
       <div class="details-main-home">
         <div class="phonenumber-home">
           <p>
-            +0800 2336 7811 <br />
+            + 0800 2336 7811 <br />
             Give Us a Call
           </p>
         </div>
@@ -70,6 +83,21 @@
       </div>
     </div>
 
+    <!-- WELCOME PAGE -->
+    <section class="welcome-page">
+      <!-- WELCOME CONTAINER -->
+      <div class="welcome-container">
+        <div class="welcome-div">
+          <P class="welcome-heading">Welcome to PhysioZen</P>
+        </div>
+        <div class="treatments-welcome-page">
+          <p class="treatments-provide">Treatment-based Chiropractic, <br> Acupuncture, Massage Therapy, <br> Physiotherapy & Osteopathy</p>
+        </div>
+        <div class="treatments-desc-welcome">
+          <p class="treatments-description">We partner with you along your health journey; moving away from pain and towards getting you back to doing the things you love.</p>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
