--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Tenor Sans"
       rel="stylesheet"
     />
-    <title>PhysioZen</title>
+    <title>physiozen</title>
   </head>
 
   <body>
