Add Media Query

--- a/index.html
+++ b/index.html
@@ -231,8 +231,15 @@
           class="better-image"
         />
       </header>
+
       <!-- image & description section -->
       <div class="desc-container">
+        <!-- <img
+          src="assets/ourphilosophy/betterTodayPage.webp"
+          alt="betterTodayPage"
+          class="betterTodayimg"
+        /> -->
+        <!-- image container -->
         <div class="image-container-ourphilosophy">
           <img
             src="assets/ourphilosophy/our-philosohy.webp"
@@ -240,11 +247,7 @@
             class="philosophy-img"
           />
         </div>
-        <img
-          src="assets/ourphilosophy/betterTodayPage.webp"
-          alt="betterTodayPage"
-          class="betterTodayimg"
-        />
+        
         <div class="description-container">
           <p class="philosophy-desc">
             One-on-one treatments without the use of gym equipment, thus fully
