--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <img src="assets/brandnamelogo.svg" alt="Brand-Name-Logo-Main" />
         </div>
         <div class="nav-bar-page-links">
-          <a href="home" class="nav-menu">Home</a>
-          <a href="aboutus" class="nav-menu">About Us</a>
-          <a href="services" class="nav-menu">Services</a>
-          <a href="pages" class="nav-menu">Pages</a>
-          <a href="blogPage" class="nav-menu">Blog Page</a>
-          <a href="contacts" class="nav-menu">Contacts</a>
+          <a href="#home" class="nav-menu">Home</a>
+          <a href="#welcome-page" class="nav-menu">About Us</a>
+          <a href="#services" class="nav-menu">Services</a>
+          <a href="#pages" class="nav-menu">Pages</a>
+          <a href="#welcome-blog-page" class="nav-menu">Blog Page</a>
+          <a href="#footer-desc-header" class="nav-menu">Contacts</a>
         </div>
         <div class="searchBar-bookingAppoinments">
           <div class="search-bar">
@@ -58,7 +58,11 @@
       <!-- Name Container-Home Page -->
       <div class="main-name-container">
         <div class="patients-number-home">
-          <img src="assets/icons/fivestars.png" alt="five-stars" class="five-star" />
+          <img
+            src="assets/icons/fivestars.png"
+            alt="five-stars"
+            class="five-star"
+          />
           <p class="patientsnum">TRUSTED BY 50,000+ PATIENTS</p>
         </div>
         <header class="main-name-heading-home">
@@ -92,7 +96,7 @@
     </div>
 
     <!-- WELCOME PAGE -->
-    <section class="welcome-page">
+    <section id="welcome-page">
       <!-- WELCOME CONTAINER -->
       <div class="welcome-container">
         <div class="welcome-div">
@@ -114,14 +118,23 @@
       </div>
 
       <!-- Image Slides -->
-      <!-- <div class="image-slides-container">
-        <img src="assets/services-slide-images/manualTherapy-slide.webp" alt="">
-        <img src="assets/services-slide-images/massage-slide.webp" alt="">
-        <img src="assets/services-slide-images/pilates-slide.webp" alt="">
-        <img src="assets/services-slide-images/acupuncture-slide.webp" alt="">
-        <img src="assets/services-slide-images/lymphaticDrainage-webp.webp" alt="">
-        <img src="assets/services-slide-images/oesteopathy-slide.webp" alt="">
-       </div> -->
+      <div class="image-slides-container">
+        <div class="slide-container cont-1">
+          <p class="header">Manual Therapy</p>
+        </div>
+        <div class="slide-container cont-2">
+          <p class="header">Lymphatic Drainage</p>
+        </div>
+        <div class="slide-container cont-3">
+          <p class="header">Pilates</p>
+        </div>
+        <div class="slide-container cont-4">
+          <p class="header">Osteopathy</p>
+        </div>
+        <div class="slide-container cont-5">
+          <p class="header">Massage</p>
+        </div>
+      </div>
     </section>
 
     <!-- Common Conditions Page -->
@@ -176,7 +189,11 @@
             class="reviewImages"
           />
           <div class="review-container1">
-            <img src="assets/icons/fivestars.png" alt="fiveStars" class="fivestars" />
+            <img
+              src="assets/icons/fivestars.png"
+              alt="fiveStars"
+              class="fivestars"
+            />
             <p class="review">
               “I would not have made it, if it weren't for my rehab team.”
             </p>
@@ -190,7 +207,11 @@
             class="reviewImages"
           />
           <div class="review-container2">
-            <img src="assets/icons/fivestars.png" alt="fiveStars" class="fivestars" />
+            <img
+              src="assets/icons/fivestars.png"
+              alt="fiveStars"
+              class="fivestars"
+            />
             <p class="review">
               “Rehabilitation was harder than I expected, but I,m grateful to
               resume my lifestyle once again.”
@@ -205,7 +226,11 @@
             class="reviewImages"
           />
           <div class="review-container3">
-            <img src="assets/icons/fivestars.png" alt="fiveStars" class="fivestars" />
+            <img
+              src="assets/icons/fivestars.png"
+              alt="fiveStars"
+              class="fivestars"
+            />
             <p class="review">
               “They have been so good to me, I'm so glad they helped me.”
             </p>
@@ -247,7 +272,7 @@
             class="philosophy-img"
           />
         </div>
-        
+
         <div class="description-container">
           <p class="philosophy-desc">
             One-on-one treatments without the use of gym equipment, thus fully
@@ -265,50 +290,6 @@
         </div>
       </div>
     </section>
-
-    <!-- service-section -->
-    <!-- service header -->
-    <!-- <section class="service-page-and-question">
-  
-    <div class="service-section">
-      <header class="service-header">
-        <div class="main-header-service">
-          <p class="header-service">Providing excellent service to our patients</p>
-        </div>
-        <div class="desc-header-service">
-          <p class="desc-head">One-on-one treatments without the use of gym equipment, thus fully utilizing the hands on
-            time with the therapist and ensuring greater homecare outcomes.</p>
-        </div>
-      </header>
-      <div class="service-thumbnail-image">
-        <img src="assets/ourphilosophy/videoThumpnailImage.webp" alt="Thumbnail-image-service"
-          class="Thumbnail-image-service">
-      </div>
-    </div>
-    <section class="question-page">
-      <div class="question-container">
-        <header class="question-header">
-          <p class="small-head-questions">GOT A QUESTION?</p>
-          <p class="main-head-questions">Frequently <br> Asked Questions</p>
-        </header>
-        
-      </div>
-      <div class="questions-desc">
-        <div class="question-dropdown">What is osteopathy?</div>
-        <div class="question-dropdown">What happens at the first consultation?</div>
-        <div class="question-dropdown">What does osteopathic treatment involve?</div>
-        <div class="question-dropdown">Do i have to undress?</div>
-        <div class="question-dropdown">Does treatment hurt?</div>
-      </div>
-
-      <div class="question-page-logo-container">
-        <img src="assets/questionPageLogo/simplyHealthLogo.webp" alt="simplyHealthLogo" class="question-logo">
-        <img src="assets/questionPageLogo/DenplanLogo.webp" alt="DenplanLogo" class="question-logo">
-        <img src="assets/questionPageLogo/BupaLogo.webp" alt="BupaLogo" class="question-logo">
-        <img src="assets/questionPageLogo/unumLogo.webp" alt="unumLogo" class="question-logo">
-        <img src="assets/questionPageLogo/cignaLogo.webp" alt="cignaLogo" class="question-logo">
-        <img src="assets/questionPageLogo/avivaLogo.webp" alt="avivaLogo" class="question-logo">
-       </div> -->
 
     <section class="service-page-and-question">
       <div class="service-section">
@@ -527,7 +508,7 @@
     </section>
 
     <footer class="footer-section">
-      <div class="footer-desc-header">
+      <div id="footer-desc-header">
         <header class="footer-header">
           <div class="main-header-footer">
             Get a special 50% new patient discount and unleash your health.
